Fix overlapping pseudo element in code blocks

--- a/assets/scss/_highlight.scss
+++ b/assets/scss/_highlight.scss
@@ -32,7 +32,7 @@ code {
     line-height: 1.3;
     margin: 0;
     overflow-x: auto;
-    padding: $bleed;
+    padding: 1.5rem $bleed;
     width: 100%;
   }
 
